# ROD

./: README.md  machine.urdf  station.launch  station.urdf
completeStation/: .setup_assistant  CMakeLists.txt  package.xml
completeStation/config/: fake_controllers.yaml  joint_limits.yaml  joint_state_controller.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  station_robots.srdf  stomp_planning.yaml  trajectory_controller.yaml
completeStation/launch/: bringup_moveit.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  menu.launch  minimal.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  project.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  spawnRobots.launch  stomp_planning_pipeline.launch.xml
environment/: CMakeLists.txt  machine.xacro  package.xml
environment/meshes/: machine.stl  machineMM.stl
handler/: package.xml
handler_moveit/: .setup_assistant  CMakeLists.txt  package.xml
handling_robot/: CMakeLists.txt  package.xml
polisher/: package.xml
polisher_moveit/: .setup_assistant  CMakeLists.txt  package.xml
polishing_robot/: CMakeLists.txt  package.xml
polishing_station/: CMakeLists.txt  package.xml
scara/: package.xml
scara_moveit/: .setup_assistant  package.xml
station/: CMakeLists.txt  package.xml
(+122 files in other folders)
